2006-01-22  David Schleef  <ds@schleef.org>

	* plugin/Makefile.am:
	  Don't link against mozilla libs, since we don't actually
	  use them.

2006-01-09  David Schleef  <ds@schleef.org>

	* NEWS: update the news
	* configure.ac: bump version

2006-01-09  David Schleef  <ds@schleef.org>

	* configure.ac: remove more player bits
	* player/.cvsignore:

2006-01-09  David Schleef  <ds@schleef.org>

	* INSTALL: updated by autoconf.
	* configure.ac: we only use pkg-config to detect mozilla now.
	  start using gstreamer-0.10.  Remove SDL check.
	* Makefile.am: remove SDL player subdir
	* libswfdec/actions_tags.c: add audio_stop_sounds()
	* libswfdec/proto.h: add protect()
	* libswfdec/swf.c: disable experimental code by default
	* libswfdec/swfdec_audio.c: implement audio_stop_sounds()
	* libswfdec/swfdec_audio.h: same
	* libswfdec/swfdec_image.c: handle jpegtables better
	* libswfdec/swfdec_render.c: change ERROR to DEBUG
	* libswfdec/swfdec_tag.c: implement protect
	* plugin/gstswfdec.c: hacking to make plugin better
	* plugin/swfdec-mozilla-player.c: same
	* test/Makefile.am: disable some tests that don't compile
	* player/Makefile.am: remove SDL player
	* player/swf_play.c: remove SDL player

2006-01-09  David Schleef  <ds@schleef.org>

	* plugin/Makefile.am:
	* plugin/gstappsrc.c:
	* plugin/gstappsrc.h:
	* plugin/gstswfdec.c:
	* plugin/gstswfdec.h:
	* plugin/plugin.c:
	* plugin/swfdec-mozilla-player.c:
	  Dude, the mojira plugin all works and shit.

2006-01-08  David Schleef  <ds@schleef.org>

	* plugin/Makefile.am:
	* plugin/gstswfdec.c:
	* plugin/gstswfdec.h:
	* plugin/swfdec-mozilla-player.c:
	  Checkpoint on plugin/player fixes.

2005-12-16  David Schleef  <ds@schleef.org>

	* libswfdec/actions.c:
	* libswfdec/actions_tags.c:
	* libswfdec/swf.c:
	* libswfdec/swfdec_render.c:
	* libswfdec/swfdec_render.h:
	* libswfdec/swfdec_render_cairo.c:
	  Add some debuggering code.  Fix some bugs:
	   - fix image translation matrix