@@ -1,5 +1,11 @@
 2006-01-22  David Schleef  <ds@schleef.org>
 
+	* README:
+	* plugin/plugin.c:
+	  Update some words.
+
+2006-01-22  David Schleef  <ds@schleef.org>
+
 	* plugin/Makefile.am:
 	  Don't link against mozilla libs, since we don't actually
 	  use them.
